...
  }

  return (
    <View style={styles.groupsWrap}>
      <Text
        style={styles.sectionTitle}
        testID="promoter-groups-section-header"
      >
        My promoter groups
      </Text>
      <View style={styles.groupsList}>
        {groups.map((group, i) => (
          <PromoterGroupRowView
...
